# photon

./: .gitignore  Cargo.toml  README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/photon/: PhotonPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/photon_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: photon.podspec
ios/Classes/: PhotonPlugin.h  PhotonPlugin.m  SwiftPhotonPlugin.swift
lib/: photon.dart  photon_web.dart
macos/: photon.podspec
macos/Classes/: PhotonPlugin.swift
native/photon-ffi/: Cargo.toml  build.rs
test/: photon_test.dart
windows/: CMakeLists.txt  photon_plugin.cpp
windows/include/photon/: photon_plugin.h
