[package]
name = "photon-ffi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = 'photon_ffi'
crate-type = ['cdylib', 'staticlib']

[dependencies]
photon = { path = "../photon" }

[build-dependencies]
cbindgen = "0.20.0"
